--- a/proyecto-general-horoscopo/api-json/package.json
+++ b/proyecto-general-horoscopo/api-json/package.json
@@ -1,16 +1,19 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.21.0"
   },
   "name": "api-json",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.6"
+  }
 }
