--- a/proyecto-general-horoscopo/api-json/package.json
+++ b/proyecto-general-horoscopo/api-json/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.7.1"
   },
   "name": "api-json",
   "version": "1.0.0",
